fix: adjust default color scheme to fix some contrast issues

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -162,7 +162,7 @@ img {
   width: 100%;
   max-width: $container-max-width;
   margin: 0 auto;
-  padding: $padding-16;
+  padding: $padding-24;
 }
 
 svg.gdoc-icon {
@@ -669,6 +669,7 @@ svg.gdoc-icon {
     margin: 0;
     padding: 0;
     width: 100%;
+    font-weight: bold;
 
     &:focus,
     &:focus-within,
